fixed textarea error message spacing issue, applied class to textareas to adjust height of input fields, gave chm logo a bem class name

--- a/css/custom-smartform.css
+++ b/css/custom-smartform.css
@@ -33,7 +33,7 @@ BEM (BLOCK ELEMENT MODIFIER ) NOTATION
 /* MODULES */
 /***************************************************/
 
-.logo {
+.document__logo {
 	margin-top: 2rem;
 	width: 45%;
 }
